--- a/views/user/dashboard/group.ejs
+++ b/views/user/dashboard/group.ejs
@@ -24,13 +24,7 @@
             <!-- Bread crumb -->
             <div class="row page-titles">
                 <div class="col-md-5 align-self-center">
-                    <h3 class="text-primary">Balance</h3> </div>
-                <div class="col-md-7 align-self-center">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                        <li class="breadcrumb-item active">Balance</li>
-                    </ol>
-                </div>
+                    <h3 class="text-primary">New Group</h3> </div>
             </div>
             <!-- End Bread crumb -->
             <!-- Container fluid  -->
@@ -38,7 +32,7 @@
                 <!-- Start Page Content -->
                 <div class="card-body">
                     <div class="login-form">
-                        <h2 class="control-label">New Group</h4>
+                        <h2 class="control-label">Create a Group</h4>
                         <form method="POST" action="">
                             <div class="form-group">
                                  <label class="control-label">Group Name</label>
@@ -73,9 +67,9 @@
             <!-- End Container fluid  -->
             <% include ./../../partials/dashboard/changecoin %>
             <!-- footer -->
-            <% include ./../../partials/dashboard/footer %>
             <!-- End footer -->
         </div>
+        <% include ./../../partials/dashboard/footer %>
         <!-- End Page wrapper  -->
     </div>
     <!-- End Wrapper -->
