--- a/views/user/dashboard/group_accounts.ejs
+++ b/views/user/dashboard/group_accounts.ejs
@@ -24,11 +24,11 @@
             <!-- Bread crumb -->
             <div class="row page-titles">
                 <div class="col-md-5 align-self-center">
-                    <h3 class="text-primary">Balance</h3> </div>
+                    <h3 class="text-primary">Groups</h3> </div>
                 <div class="col-md-7 align-self-center">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                        <li class="breadcrumb-item active">Balance</li>
+                        <li class="breadcrumb-item active">Groups</li>
                     </ol>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                         <div class="card p-30">
                             <div class="media">
                                 <div class="media-left meida media-middle">
-                                    <span><i class="fa fa-plus f-s-40 color-primary"></i></span>
+                                    <span><i class="fa fa-object-group f-s-40 color-primary"></i></span>
                                 </div>
                                 <div class="media-body media-text-right">
                                     <h2>Nombre del grupo</h2>
@@ -60,9 +60,9 @@
             <!-- End Container fluid  -->
 
             <!-- footer -->
-            <% include ./../../partials/dashboard/footer %>
             <!-- End footer -->
         </div>
+        <% include ./../../partials/dashboard/footer %>
         <!-- End Page wrapper  -->
     </div>
     <!-- End Wrapper -->
