--- a/views/user/dashboard/showgroup.ejs
+++ b/views/user/dashboard/showgroup.ejs
@@ -51,27 +51,6 @@
                     </div>
                 </div>
 
-                 <div class="card-body">
-                    <div class="login-form">
-                        <h2 class="control-label">Add Account</h4>
-                        <form>
-                            <label class="control-label">Credit Accounts</label>
-                            <div class="form-group">
-                                    <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                            </div>
-                            <label class="control-label">Savings Accounts</label>
-                            <div class="form-group">
-                                    <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                            </div>
-                            <label class="control-label">Currrent Accounts</label>
-                            <div class="form-group">
-                                    <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Add</button>
-                        </form>
-                    </div>
-                </div>
-
                 <div class="card-body">
                     <div class="login-form">
                         <div class="form-group">
@@ -96,6 +75,28 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="card-body">
+                    <div class="login-form">
+                        <h2 class="control-label">Add Account</h4>
+                        <form>
+                            <label class="control-label">Credit Accounts</label>
+                            <div class="form-group">
+                                    <input name="name" type="checkbox" class="form-control" placeholder="account" required>
+                            </div>
+                            <label class="control-label">Savings Accounts</label>
+                            <div class="form-group">
+                                    <input name="name" type="checkbox" class="form-control" placeholder="account" required>
+                            </div>
+                            <label class="control-label">Currrent Accounts</label>
+                            <div class="form-group">
+                                    <input name="name" type="checkbox" class="form-control" placeholder="account" required>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Add</button>
+                        </form>
+                    </div>
+                </div>
+
 
                 
 
@@ -103,9 +104,9 @@
             <!-- End Container fluid  -->
             <% include ./../../partials/dashboard/changecoin %>
             <!-- footer -->
-            <footer class="footer"> © 2018 EasyFinance. All rights reserved.</footer>
             <!-- End footer -->
         </div>
+        <% include ./../../partials/dashboard/footer %>
         <!-- End Page wrapper  -->
     </div>
     <!-- End Wrapper -->
