--- a/views/user/dashboard/budget.ejs
+++ b/views/user/dashboard/budget.ejs
@@ -26,7 +26,13 @@
             <!-- Bread crumb -->
             <div class="row page-titles">
                 <div class="col-md-5 align-self-center">
-                    <h3 class="text-primary">Credit Accounts</h3> </div>
+                    <h3 class="text-primary">Budget Accounts</h3> </div>
+                    <div class="col-md-7 align-self-center">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
+                        <li class="breadcrumb-item active">Budget</li>
+                    </ol>
+                </div>
             </div>
             <!-- End Bread crumb -->
             <!-- Container fluid  -->
@@ -62,9 +68,10 @@
             <% include ./../../partials/dashboard/transfer %>
             <!-- End Container fluid  -->
             <!-- footer -->
-            <footer class="footer"> © 2018 EasyFinance. All rights reserved.</footer>
+            
             <!-- End footer -->
         </div>
+        <% include ./../../partials/dashboard/footer %>
         <!-- End Page wrapper  -->
     </div>
     <!-- End Wrapper -->
