--- a/views/user/dashboard/main.ejs
+++ b/views/user/dashboard/main.ejs
@@ -20,15 +20,15 @@
         <% include ./../../partials/dashboard/dash_sidebar %>
         <!-- End Left Sidebar  -->
         <!-- Page wrapper  -->
+        
         <div class="page-wrapper">
             <!-- Bread crumb -->
             <div class="row page-titles">
                 <div class="col-md-5 align-self-center">
-                    <h3 class="text-primary">Balance</h3> </div>
+                    <h3 class="text-primary">Home</h3> </div>
                 <div class="col-md-7 align-self-center">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                        <li class="breadcrumb-item active">Balance</li>
                     </ol>
                 </div>
             </div>
@@ -102,10 +102,11 @@
             <!-- End Container fluid  -->
             <% include ./../../partials/dashboard/changecoin %>
             <!-- footer -->
-            <% include ./../../partials/dashboard/footer %>
+            
             <!-- End footer -->
         </div>
         <!-- End Page wrapper  -->
+        <% include ./../../partials/dashboard/footer %>
     </div>
     <!-- End Wrapper -->
     <% include ./../../partials/dashboard/libjs %>
