--- a/views/user/dashboard/savings.ejs
+++ b/views/user/dashboard/savings.ejs
@@ -27,6 +27,12 @@
             <div class="row page-titles">
                 <div class="col-md-5 align-self-center">
                     <h3 class="text-primary">Savings Accounts</h3> </div>
+                    <div class="col-md-7 align-self-center">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
+                        <li class="breadcrumb-item active">Savings</li>
+                    </ol>
+                </div>
             </div>
             <!-- End Bread crumb -->
             <!-- Container fluid  -->
@@ -58,9 +64,9 @@
             </div>
             <!-- End Container fluid  -->
             <!-- footer -->
-            <footer class="footer"> © 2018 EasyFinance. All rights reserved.</footer>
             <!-- End footer -->
         </div>
+        <% include ./../../partials/dashboard/footer %>
         <!-- End Page wrapper  -->
     </div>
     <!-- End Wrapper -->
