--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,7 +54,7 @@
     <div class="container text-center" style="padding-top: 0px">
       <div class="row">
         <div class="col-md-12">
-          <a class="hero-brand" href="index.html" title="Home"><img alt="EasyFinance Logo" src="/img/logo.png"></a>
+          <a class="hero-brand" href="#" title="Home"><img alt="EasyFinance Logo" src="/img/logo.png"></a>
         </div>
       </div>
 
