--- a/views/user/dashboard/dumy.ejs
+++ b/views/user/dashboard/dumy.ejs
@@ -9,6 +9,7 @@
         <svg class="circular" viewBox="25 25 50 50">
             <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" /> </svg>
     </div>
+
     <!-- Main wrapper  -->
     <div id="main-wrapper">
         <!-- header header  -->
@@ -16,6 +17,7 @@
             <% include ./../../partials/dashboard/dash_header %>
         </div>
         <!-- End header header -->
+
         <!-- Left Sidebar  -->
         <% include ./../../partials/dashboard/dash_sidebar %>
         <!-- End Left Sidebar  -->
@@ -24,59 +26,57 @@
             <!-- Bread crumb -->
             <div class="row page-titles">
                 <div class="col-md-5 align-self-center">
-                    <h3 class="text-primary">Balance</h3> </div>
+                    <h3 class="text-primary">Credit Accounts</h3> </div>
                 <div class="col-md-7 align-self-center">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                        <li class="breadcrumb-item active">Balance</li>
+                        <li class="breadcrumb-item active">Credit</li>
                     </ol>
                 </div>
             </div>
-
+            
             <!-- End Bread crumb -->
             <!-- Container fluid  -->
             <div class="container-fluid">
                 <!-- Start Page Content -->
                 <div class="card-body">
                     <div class="login-form">
-                        <h2 class="control-label">Select to Sync your Accounts</h4>
-                        <form>
-                            <label class="control-label">Credit Accounts</label>
-                            <div class="form-group">
-                                    <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                            </div>
-                            <label class="control-label">Savings Accounts</label>
-                            <div class="form-group">
-                                    <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                            </div>
-                            <label class="control-label">Currrent Accounts</label>
-                            <div class="form-group">
-                                    <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Sync</button>
-                            <a href="/users/dashboard/add_account"><button class="btn btn-secondary">Cancel</button></a>
-                        </form>
+                        <div class="form-group">
+                            <table>
+                                <td><%=b%></td>
+                                <tr>
+                                    <th>Account</th>
+                                    <th>Bank</th>
+                                    <th>Balance</th>
+                                    <th>Delete</th>
+                                </tr>
+                                <!--De Api-->
+                                <% for(let i = 0; i < data.length; i++) { %>
+                                <tr>
+                                    <td><%=data[i].number_acc%></td>
+                                    <td><%=data[i].name_bank%></td>
+                                    <td><%=balance[i]%></td>
+                                    
+                                    <td><button class="btn btn-primary btn-flat" onclick="deleteAcc()">Delete</button></td>
+                                </tr>
+                                <% } %>
+                                
+                                <!--!!-->
+                            </table>
+                        </div>
                     </div>
-
-                <% for(let i = 0; i < results.account; i++) { %>
-                <article>
-                    <h2><%= results.account[i]%></h2>
-                </article>
-                
-                <% } %>
-
-                    <!--formulario con checkbox de las cuentas entregadas por la api-->
                 </div>
-            </div>        
+            </div>
             <!-- End Container fluid  -->
-            <% include ./../../partials/dashboard/changecoin %>
             <!-- footer -->
-            <% include ./../../partials/dashboard/footer %>
             <!-- End footer -->
         </div>
+        <% include ./../../partials/dashboard/footer %>
         <!-- End Page wrapper  -->
     </div>
     <!-- End Wrapper -->
     <% include ./../../partials/dashboard/libjs %>
+
 </body>
+
 </html>
