Render saving, current, credit

--- a/views/user/dashboard/dumy.ejs
+++ b/views/user/dashboard/dumy.ejs
@@ -53,7 +53,7 @@
                                 <tr>
                                     <td><%=data[i].number_acc%></td>
                                     <td><%=data[i].name_bank%></td>
-                                    <td><%=balance[i]%></td>
+                                    <td><%=balances[i]%></td>
                                     
                                     <td><button class="btn btn-primary btn-flat" onclick="deleteAcc()">Delete</button></td>
                                 </tr>
