--- a/views/user/recover_password.ejs
+++ b/views/user/recover_password.ejs
@@ -72,6 +72,9 @@
                         <div class="login-content card" style="border-radius: 4%">
                             <div class="login-form">
                                 <h4>Forgot Password</h4>
+                                <% if (message) { %>
+                                  <div class="alert alert-success"><%= message %></div>
+                                <% } %>
                                 <form name="formtovalidate" onsubmit="return validateForm()" action="/users/password_recovery" method="POST">
                                     <div class="form-group">
                                         <label class="control-label">Email</label>
