--- a/views/user/dashboard/budget.ejs
+++ b/views/user/dashboard/budget.ejs
@@ -30,7 +30,7 @@
                     <div class="col-md-7 align-self-center">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                        <li class="breadcrumb-item active">Budget</li>
+                        <li class="breadcrumb-item active"><%= dump %></li>
                     </ol>
                 </div>
             </div>
