--- a/views/partials/dashboard/banklogin.ejs
+++ b/views/partials/dashboard/banklogin.ejs
@@ -15,7 +15,7 @@
             <div class="form-group">
                 <input class="form-control" type="password" placeholder="Pin password" required name="pin_password">
             </div>
-            <input name="bank" type='hidden' id= "hiddenbank" name='id' value='' />
+            <input name="bank" type='hidden' id= "hiddenbank" name='id' value=''>
             <button type="submit" class="btn btn-primary">Login</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="document.getElementById('banklogin').style.display='none'">Close</button>
           </form>
