--- a/views/partials/dashboard/libjs.ejs
+++ b/views/partials/dashboard/libjs.ejs
@@ -32,6 +32,7 @@
     <script src="/js/lib/owl-carousel/owl.carousel-init.js"></script>
     <script src="/js/scripts.js"></script>
     <script src="/js/validate.js"></script> 
+    <script src="/js/deleteAccount.js"></script> 
     <!-- scripit init-->
 
     <script src="/js/custom.min.js"></script>
