--- a/views/user/dashboard/budget.ejs
+++ b/views/user/dashboard/budget.ejs
@@ -42,7 +42,7 @@
                 <div class="card-body">
                     <div class="login-form">
                         <div class="form-group">
-                            <table>
+                            <table id="accountTable">
                                 <tr>
                                     <th>Account</th>
                                     <th>Bank</th>
@@ -56,7 +56,7 @@
                                     <td>xxxxx</td>
                                     <td>xxxxx</td>
                                     <td>xxxxx</td>
-                                    <td><button class="btn btn-primary btn-flat" onclick="deleteAcc()">Delete</button></td>
+                                    <td><button class="btn btn-primary btn-flat" onclick="deleteAcc(this)">Delete</button></td>
                                 </tr>
                                 <!--!!-->
                             </table>
@@ -66,6 +66,7 @@
                 </div>
             </div>
             <% include ./../../partials/dashboard/transfer %>
+            <% include ./../../partials/dashboard/deleteform %>
             <!-- End Container fluid  -->
             <!-- footer -->
             
