--- a/views/user/dashboard/current.ejs
+++ b/views/user/dashboard/current.ejs
@@ -42,7 +42,7 @@
                 <div class="card-body">
                     <div class="login-form">
                         <div class="form-group">
-                            <table>
+                            <table id="accountTable">
                                 <tr>
                                     <th>Account</th>
                                     <th>Bank</th>
@@ -55,7 +55,7 @@
                                     <td><%=data[i].name_bank%></td>
                                     <td><%=balances[i]%></td>
                                     
-                                    <td><button class="btn btn-primary btn-flat" onclick="deleteAcc()">Delete</button></td>
+                                    <td><button class="btn btn-primary btn-flat" onclick="deleteAcc(this)">Delete</button></td>
                                 </tr>
                                 <% } %>
                                 
@@ -65,6 +65,7 @@
                     </div>
                 </div>
             </div>
+            <% include ./../../partials/dashboard/deleteform %>
             <!-- End Container fluid  -->
             <!-- footer -->
             <!-- End footer -->
