--- a/views/user/dashboard/select_accounts.ejs
+++ b/views/user/dashboard/select_accounts.ejs
@@ -33,25 +33,23 @@
                 <div class="card-body">
                     <div class="login-form">
                         <h2 class="control-label">Select to Sync your Accounts</h4>
-                            <% for(let i = 0; i < results.length; i++) { %>
-                            <tr>
-                                <td><%=results[i].bankAcc%></td>
-                                <td><%=results[i].balanceAcc%></td>
-                            </tr>
-                            <% } %>
                         <form>
                             <label class="control-label">Credit Accounts</label>
-                            <div class="form-group">
-                                    <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                            </div>
+                            <table>
+                                <% for(let i = 0; i < results.length; i++) { %>
+                                    <tr>
+                                        <td><%=results[i].bankAcc%>  <%=results[i].balanceAcc%></td>
+                                        <td><input style="width:100%" type="checkbox" name=""></td>                                        
+                                    </tr>
+                                <% } %>
+                            </table>
                             <label class="control-label">Savings Accounts</label>
-                            <div class="form-group">
-                                    <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                            </div>
+                            
+
+
                             <label class="control-label">Currrent Accounts</label>
-                            <div class="form-group">
-                                    <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                            </div>
+                            
+
                             <button type="submit" class="btn btn-primary">Sync</button>
                             <a href="/users/dashboard/add_account"><button class="btn btn-secondary">Cancel</button></a>
                         </form>
