--- a/views/partials/dashboard/deleteform.ejs
+++ b/views/partials/dashboard/deleteform.ejs
@@ -1,4 +1,4 @@
-<form id="confirmDelete">
+<form id="confirmDelete" method="post" action="/test">
                 <input type="hidden" id="accountNumber" name="anumber" value="">
                 <input type="hidden" id="bank" name="bank" value="">
             </form>
