--- a/views/user/dashboard/select_accounts.ejs
+++ b/views/user/dashboard/select_accounts.ejs
@@ -33,13 +33,13 @@
                 <div class="card-body">
                     <div class="login-form">
                         <h2 class="control-label">Select to Sync your Accounts</h4>
-                        <form>
+                        <form action="/test" method="post">
                             <label class="control-label">Credit Accounts</label>
                             <table>
                                 <% for(let i = 0; i < results.length; i++) { %>
                                     <tr>
-                                        <td><%=results[i].bankAcc%>  <%=results[i].balanceAcc%></td>
-                                        <td><input style="width:100%" type="checkbox" name=""></td>                                        
+                                        <td><%=results[i].bankAcc%>  <%=results[i].balanceAcc%> <%=results[i].numberAcc%></td>
+                                        <td><input style="width:100%" type="checkbox" name="selectacc<%=i%>" value="<%=results[i].numberAcc%>"></td>                                        
                                     </tr>
                                 <% } %>
                             </table>
