--- a/views/partials/dashboard/dash_header.ejs
+++ b/views/partials/dashboard/dash_header.ejs
@@ -1,7 +1,7 @@
             <nav class="navbar top-navbar navbar-expand-md navbar-light">
                 <!-- Logo -->
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="/">
+                    <a class="navbar-brand" href="/users/dashboard">
                         <!-- Logo icon -->
                         <b><img src="/img/eflogo2.png" alt="homepage" class="dark-logo" /></b> 
                         <!--End Logo icon -->
