--- a/views/user/recover_password2.ejs
+++ b/views/user/recover_password2.ejs
@@ -71,23 +71,21 @@
                     <div class="col-lg-4">
                         <div class="login-content card" style="border-radius: 4%">
                             <div class="login-form">
-                                <h4><%=title%></h4>
-                                <form name="formtovalidate" onsubmit="return validateForm()" action="/users/signup" method="POST">
+                                <h4>Forgot Password</h4>
+                                <% if (message) { %>
+                                  <div class="alert alert-success"><%= message %></div>
+                                <% } %>
+                                <form name="formtovalidate" onsubmit="return validateForm()" action="/users/password_recovery" method="POST">
                                     <div class="form-group">
-                                        <label class="control-label">Password</label>
-                                        <input onkeyup="validate()" type="password" data-minlength="8" maxlength="50" class="form-control" id="inputPassword" placeholder="Example: Abcd_1234" required>
-                                        <div class="help-block" id = "passval"></div>
-                                        <div class="help-block" id = "passval2"></div>
-                                        <div class="help-block" id = "passval3"></div>
-                                        <div class="help-block" id = "passval4"></div>
-                                    </div>
-                                    <div class="form-group">
-                                      <label class="control-label">Password Confirm</label>
-                                      <input onkeyup="validate()" type="password" class="form-control" id="inputPasswordConfirm" placeholder="Confirm" required name="password">
-                                      <div class="help-block with-errors" id = "passconfirmation"></div>
-                                    </div>                                    
-                                    <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30" id="submitButton">Change Password</button>                                    
+                                        <label class="control-label">Email</label>
+                                        <input name="email" onkeyup="validate()" type="email" class="form-control" id="email" placeholder="Email" required>
+                                        <div id = "emailval"></div>
+                                    </div>                     
+                                    <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30" id="submitButton">Recover</button>                                    
                                 </form>
+                                <div class="register-link m-t-15 text-center">
+                                        <p>Don't have account ? <a href="/users/signup"> Sign Up Here</a></p>
+                                </div>
                             </div>
                         </div>
                     </div>
