Fixed create_budget view

--- a/views/user/dashboard/create_budget.ejs
+++ b/views/user/dashboard/create_budget.ejs
@@ -54,20 +54,31 @@
                                  <!--modal?-->
                                  <div class="login-form">
                                     <h2 class="control-label">Select to Sync your Accounts</h4>
-                                    <label class="control-label">Credit Accounts</label>
-                                    <div class="form-group">
-                                            <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                                    </div>
-                                    <label class="control-label">Savings Accounts</label>
-                                    <div class="form-group">
-                                            <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                                    </div>
-                                    <label class="control-label">Currrent Accounts</label>
-                                    <div class="form-group">
-                                            <input name="name" type="checkbox" class="form-control" placeholder="account" required>
-                                    </div>
+                                    
+                                        <label class="control-label">Credit Accounts</label>
+                                        <table>
+                                            <!--for
+                                                <tr>
+                                                    <td>numerocuenta  balancecuenta etc</td>
+                                                    <td><input style="width:100%" type="checkbox" name="nombrevariable" value="numerocuenta"></td>                                        
+                                                </tr>
+                                            -->
+                                        </table>
+                                        <label class="control-label">Savings Accounts</label>
+                                            <!--for
+                                                <tr>
+                                                    <td>numerocuenta  balancecuenta etc</td>
+                                                    <td><input style="width:100%" type="checkbox" name="nombrevariable" value="numerocuenta"></td>                                        
+                                                </tr>
+                                            -->
+                                        <label class="control-label">Currrent Accounts</label>
+                                            <!--for
+                                                <tr>
+                                                    <td>numerocuenta  balancecuenta etc</td>
+                                                    <td><input style="width:100%" type="checkbox" name="nombrevariable" value="numerocuenta"></td>                                        
+                                                </tr>
+                                            -->                                                                
                                 </div>
-                                 <!-- Formulario checkbox con las cuentas del usuario -->
 
                             </div>
                             <button type="submit" class="btn btn-primary">Create</button>
